# pico-test

./: CMakeLists.txt  arm-gcc-toolchain.cmake  hello-pico.cpp
test/: test.cpp
